--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,35 +13,59 @@
         android:textSize="24sp"
         android:padding="8dp" />
 
-    <TextView
-        android:id="@+id/magnetometerMagnitudeTextView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Magnetometer Magnitude: 0"
-        android:textSize="20sp"
-        android:padding="8dp" />
+        android:orientation="horizontal"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/magnetometerMagnitudeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mag: 0"
+            android:textSize="20sp"
+            android:padding="8dp" />
 
-    <TextView
-        android:id="@+id/uncalibratedMagnetometerMagnitudeTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Uncalibrated Magnitude: 0"
-        android:textSize="20sp"
-        android:padding="8dp" />
+        <TextView
+            android:id="@+id/uncalibratedMagnetometerMagnitudeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Uncali Mag: 0"
+            android:textSize="20sp"
+            android:padding="8dp" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/magnetometerXYZTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Magnetometer: x=0, y=0, z=0"
-        android:padding="8dp" />
 
-    <TextView
-        android:id="@+id/uncalibratedMagnetometerXYZTextView"
+<!--    <TextView-->
+<!--        android:id="@+id/magnetometerXYZTextView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Magnetometer: x=0, y=0, z=0"-->
+<!--        android:padding="8dp" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/uncalibratedMagnetometerXYZTextView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Uncalibrated: x=0, y=0, z=0"-->
+<!--        android:padding="8dp" />-->
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Uncalibrated: x=0, y=0, z=0"
-        android:padding="8dp" />
+        android:orientation="horizontal"
+        android:gravity="center">
+        <Button
+            android:id="@+id/buttonImport"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Import CSV" />
+        <Button
+            android:id="@+id/buttonExport"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Export CSV" />
+    </LinearLayout>
 
     <!-- 그래프 뷰 -->
     <com.example.magneticlocalization.GraphView
@@ -50,6 +74,12 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="#f0f0f0" />
+
+    <CheckBox
+        android:id="@+id/autoPinCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="방향키 누르면 자동으로 Pin" />
 
     <!-- 방향 버튼 -->
     <LinearLayout
@@ -105,9 +135,6 @@
 <!--        android:layout_height="wrap_content"-->
 <!--        android:text="Pin Node" />-->
 
-    <Button
-        android:id="@+id/buttonExport"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Export CSV" />
+
+
 </LinearLayout>
