--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,7 +79,13 @@
         android:id="@+id/autoPinCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="방향키 누르면 자동으로 Pin" />
+        android:text="방향키 누르면 자동으로 Pin 모드" />
+
+    <CheckBox
+        android:id="@+id/obstacleCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="장애물 기록 모드" />
 
     <!-- 방향 버튼 -->
     <LinearLayout
@@ -126,6 +132,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="▼" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="right">
+        <Button
+            android:id="@+id/buttonDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="삭제" />
     </LinearLayout>
 
     <!-- 핀 버튼 -->
