--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -139,11 +139,11 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="right">
-        <Button
-            android:id="@+id/buttonSettings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="설정" />
+<!--        <Button-->
+<!--            android:id="@+id/buttonSettings"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="설정" />-->
         <Button
             android:id="@+id/buttonDelete"
             android:layout_width="wrap_content"
