--- a/app/src/main/res/layout/dialog_settings.xml
+++ b/app/src/main/res/layout/dialog_settings.xml
@@ -9,12 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="이동 간격 크기 (gap)"
-        android:inputType="numberSigned" />
+        android:inputType="numberDecimal" />
 
     <EditText
         android:id="@+id/correctionEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="평면도 위치 보정 (correction)"
-        android:inputType="numberSigned" />
+        android:inputType="numberDecimal" />
 </LinearLayout>
